# serializer version: 1
# name: EvaluationCampaignManagerTest.test_transition_to_adversarial_phase_accepted_but_not_reviewed[positive review email body]
  '''
  Bonjour,
  
  La DDETS 1 a validé la conformité des justificatifs que vous avez transmis dans le cadre du contrôle a posteriori sur les embauches réalisées en auto-prescription entre le 02 Octobre 2022 et le 02 Décembre 2022.
  
  Cette campagne de contrôle est terminée pour votre SIAE EI Prim’vert ID-1234.
  
  Cordialement,
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://127.0.0.1:8000
  '''
# ---
# name: EvaluationCampaignManagerTest.test_transition_to_adversarial_phase_refused_but_not_reviewed[negative review email body]
  '''
  Bonjour,
  
  La DDETS 1 a vérifié tous les justificatifs que vous avez transmis dans le cadre du contrôle a posteriori sur vos embauches réalisées en auto-prescription entre le 02 Octobre 2022 et le 02 Décembre 2022.
  
  Suite à cette vérification, un ou plusieurs justificatifs sont attendus par la DDETS 1.
  
  Rendez-vous sur le tableau de bord de EI Prim’vert ID-1234 à la rubrique “Justifier mes auto-prescriptions”.
  
  Les embauches avec le statut “nouveaux justificatifs à traiter”, nécessitent la transmission d’un nouveau justificatif pour chaque critère concerné. Dans la page de chaque auto-prescription, un commentaire concernant le refus du premier justificatif peut être présent afin de vous fournir plus de précisions.
  
  En cas de besoin, vous pouvez consulter ce mode d’emploi : https://communaute.inclusion.beta.gouv.fr/doc/non-knowledgebase/controle-a-posteriori-pour-les-siae/
  
  Cordialement,
  
  ---
  [DEV] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [DEV]
  Les emplois de l'inclusion
  http://127.0.0.1:8000
  '''
# ---
